hphp/hack/test/typecheck/recursive_non_null_3.php.exp
File "recursive_non_null_3.php", line 20, characters 10-13:
Invalid return type (Typing[4110])
File "recursive_non_null_3.php", line 11, characters 50-50:
This is an object of type A
File "recursive_non_null_3.php", line 11, characters 32-36:
It is incompatible with a nonnull value
